After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 732110 - Button mapping doesn't work if tablet is not mapped to a screen
Button mapping doesn't work if tablet is not mapped to a screen
Status: RESOLVED FIXED
Product: gnome-settings-daemon
Classification: Core
Component: wacom
3.12.x
Other All
: Normal normal
: ---
Assigned To: Carlos Garnacho
gnome-settings-daemon-maint
Depends on:
Blocks:
 
 
Reported: 2014-06-23 15:03 UTC by Bastien Nocera
Modified: 2014-06-23 16:17 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
wacom bug (403.19 KB, image/png)
2014-06-23 15:04 UTC, Bastien Nocera
  Details
wacom: Make OSD always appear on a single monitor (2.40 KB, patch)
2014-06-23 15:50 UTC, Carlos Garnacho
committed Details | Review

Description Bastien Nocera 2014-06-23 15:03:57 UTC
As seen on this screenshot.

Mapping to one of the 2 monitors makes the OSD appear correctly.
Comment 1 Bastien Nocera 2014-06-23 15:04:22 UTC
Created attachment 279031 [details]
wacom bug
Comment 2 Bastien Nocera 2014-06-23 15:12:10 UTC
The gsd-test-wacom-osd test program shows this as well.
Comment 3 Carlos Garnacho 2014-06-23 15:50:20 UTC
Created attachment 279048 [details] [review]
wacom: Make OSD always appear on a single monitor

If the tablet has no monitor assigned, the button mapping OSD would cover
the whole span of monitors, which looks somewhat broken on multimonitor
(edit button in the middle of virtual space, svg image spread across both
monitors, etc...).

Change this behavior to always pick the primary monitor if no monitor is
assigned to the device, this makes the OSD look less broken.
Comment 4 Bastien Nocera 2014-06-23 15:56:40 UTC
Review of attachment 279048 [details] [review]:

Looks good for master and gnome-3-12
Comment 5 Carlos Garnacho 2014-06-23 16:17:17 UTC
Attachment 279048 [details] pushed as 08fdf95 - wacom: Make OSD always appear on a single monitor